## Process this file with automake to produce Makefile.in

INCLUDES = \
	-DG_LOG_DOMAIN=\"libfo\" \
	-DFO_DISABLE_DEPRECATED		\
	$(LIBXSLT_CFLAGS)	\
	$(PANGOXSL_CFLAGS)	\
	$(PANGO_CFLAGS)	\
	-I..

LDADDS = @STRIP_BEGIN@	\
	@GLIB_LIBS@	\
@STRIP_END@

noinst_LTLIBRARIES = libfo-fo.la

fo_area_c_files = \
	fo-block-area.c \
	fo-block-area.h \
	fo-block-block-area.c \
	fo-block-block-area.h \
	fo-block-container-area.c \
	fo-block-container-area.h \
	fo-external-graphic-area.c \
	fo-external-graphic-area.h \
	fo-flow-area.c \
	fo-flow-area.h \
	fo-list-block-area.c \
	fo-list-block-area.h \
	fo-list-item-area.c \
	fo-list-item-area.h \
	fo-list-item-body-area.c \
	fo-list-item-body-area.h \
	fo-list-item-label-area.c \
	fo-list-item-label-area.h \
	fo-region-body-area.c \
	fo-region-body-area.h \
	fo-table-area.c \
	fo-table-area.h \
	fo-table-body-area.c \
	fo-table-body-area.h \
	fo-table-cell-area.c \
	fo-table-cell-area.h \
	fo-table-footer-area.c \
	fo-table-footer-area.h \
	fo-table-header-area.c \
	fo-table-header-area.h \
	fo-table-row-area.c \
	fo-table-row-area.h \
	fo-page-sequence-area.c \
	fo-page-sequence-area.h \
	fo-wrapper-block-area.c \
	fo-wrapper-block-area.h

libfo_fo_includedir = $(includedir)/libfo-0.5/fo

libfo_fo_include_HEADERS = \
	fo-fo.h

libfo_fo_la_SOURCES =	\
	$(fo_area_c_files)	\
	$(libfo_fo_include_HEADERS)	\
	fo-all-fo.h		\
	fo-fo.c \
	fo-fo-private.h \
	fo-inline-fo.c \
	fo-inline-fo.h \
	fo-block-fo.c \
	fo-block-fo.h \
	fo-block-fo-private.h \
	fo-table-border-fo.c \
	fo-table-border-fo.h \
	fo-table-border-fo-private.h \
	fo-neutral-fo.c \
	fo-neutral-fo.h \
	fo-text.c \
	fo-text.h \
	fo-tree.c \
	fo-tree.h \
	fo-basic-link.c \
	fo-basic-link.h \
	fo-basic-link-private.h \
	fo-bidi-override.c \
	fo-bidi-override.h \
	fo-bidi-override-private.h \
	fo-block.c \
	fo-block.h \
	fo-block-private.h \
	fo-block-block.c \
	fo-block-block.h \
	fo-block-block-private.h \
	fo-block-layout.c \
	fo-block-layout.h \
	fo-block-layout-private.h \
	fo-block-whitespace.c \
	fo-block-whitespace.h \
	fo-block-whitespace-private.h \
	fo-block-container.c \
	fo-block-container.h \
	fo-block-container-private.h \
	fo-character.c \
	fo-character.h \
	fo-character-private.h \
	fo-color-profile.c \
	fo-color-profile.h \
	fo-color-profile-private.h \
	fo-conditional-page-master-reference.c \
	fo-conditional-page-master-reference.h \
	fo-conditional-page-master-reference-private.h \
	fo-declarations.c \
	fo-declarations.h \
	fo-declarations-private.h \
	fo-external-graphic.c \
	fo-external-graphic.h \
	fo-external-graphic-private.h \
	fo-float.c \
	fo-float.h \
	fo-flow.c \
	fo-flow.h \
	fo-flow-private.h \
	fo-footnote.c \
	fo-footnote.h \
	fo-footnote-private.h \
	fo-footnote-body.c \
	fo-footnote-body.h \
	fo-footnote-body-private.h \
	fo-initial-property-set.c \
	fo-initial-property-set.h \
	fo-initial-property-set-private.h \
	fo-inline.c \
	fo-inline.h \
	fo-inline-private.h \
	fo-inline-container.c \
	fo-inline-container.h \
	fo-inline-container-private.h \
	fo-instream-foreign-object.c \
	fo-instream-foreign-object.h \
	fo-instream-foreign-object-private.h \
	fo-layout-master-set.c \
	fo-layout-master-set.h \
	fo-layout-master-set-private.h \
	fo-leader.c \
	fo-leader.h \
	fo-leader-private.h \
	fo-list-block.c \
	fo-list-block.h \
	fo-list-block-private.h \
	fo-list-item.c \
	fo-list-item.h \
	fo-list-item-private.h \
	fo-list-item-body.c \
	fo-list-item-body.h \
	fo-list-item-body-private.h \
	fo-list-item-label.c \
	fo-list-item-label.h \
	fo-list-item-label-private.h \
	fo-marker.c \
	fo-marker.h \
	fo-marker-parent.c \
	fo-marker-parent.h \
	fo-marker-parent-private.h \
	fo-multi-case.c \
	fo-multi-case.h \
	fo-multi-case-private.h \
	fo-multi-properties.c \
	fo-multi-properties.h \
	fo-multi-properties-private.h \
	fo-multi-property-set.c \
	fo-multi-property-set.h \
	fo-multi-property-set-private.h \
	fo-multi-switch.c \
	fo-multi-switch.h \
	fo-multi-switch-private.h \
	fo-multi-toggle.c \
	fo-multi-toggle.h \
	fo-multi-toggle-private.h \
	fo-page-number.c \
	fo-page-number.h \
	fo-page-number-private.h \
	fo-page-number-citation.c \
	fo-page-number-citation.h \
	fo-page-number-citation-private.h \
	fo-page-sequence.c \
	fo-page-sequence.h \
	fo-page-sequence-private.h \
	fo-page-sequence-master.c \
	fo-page-sequence-master.h \
	fo-page-sequence-master-private.h \
	fo-region-after.c \
	fo-region-after.h \
	fo-region-after-private.h \
	fo-region-before.c \
	fo-region-before.h \
	fo-region-before-private.h \
	fo-region-body.c \
	fo-region-body.h \
	fo-region-body-private.h \
	fo-region-end.c \
	fo-region-end.h \
	fo-region-end-private.h \
	fo-region-start.c \
	fo-region-start.h \
	fo-region-start-private.h \
	fo-repeatable-page-master-alternatives.c \
	fo-repeatable-page-master-alternatives.h \
	fo-repeatable-page-master-alternatives-private.h \
	fo-repeatable-page-master-reference.c \
	fo-repeatable-page-master-reference.h \
	fo-repeatable-page-master-reference-private.h \
	fo-retrieve-marker.c \
	fo-retrieve-marker.h \
	fo-root.c \
	fo-root.h \
	fo-root-private.h \
	fo-simple-page-master.c \
	fo-simple-page-master.h \
	fo-simple-page-master-private.h \
	fo-single-page-master-reference.c \
	fo-single-page-master-reference.h \
	fo-single-page-master-reference-private.h \
	fo-static-content.c \
	fo-static-content.h \
	fo-static-content-private.h \
	fo-table.c \
	fo-table.h \
	fo-table-private.h \
	fo-table-and-caption.c \
	fo-table-and-caption.h \
	fo-table-and-caption-private.h \
	fo-table-body.c \
	fo-table-body.h \
	fo-table-body-private.h \
	fo-table-caption.c \
	fo-table-caption.h \
	fo-table-caption-private.h \
	fo-table-cell.c \
	fo-table-cell.h \
	fo-table-cell-private.h \
	fo-table-column.c \
	fo-table-column.h \
	fo-table-column-private.h \
	fo-table-footer.c \
	fo-table-footer.h \
	fo-table-footer-private.h \
	fo-table-header.c \
	fo-table-header.h \
	fo-table-header-private.h \
	fo-table-part.c \
	fo-table-part.h \
	fo-table-part-private.h \
	fo-table-row.c \
	fo-table-row.h \
	fo-table-row-private.h \
	fo-title.c \
	fo-title.h \
	fo-title-private.h \
	fo-wrapper.c \
	fo-wrapper.h \
	fo-wrapper-private.h \
	fo-wrapper-block.c \
	fo-wrapper-block.h \
	fo-wrapper-block-private.h \
	fo-wrapper-inline.c \
	fo-wrapper-inline.h \
	fo-wrapper-inline-private.h \
	fo-wrapper-inline-empty.c \
	fo-wrapper-inline-empty.h \
	fo-wrapper-inline-empty-private.h \
	fo-wrapper-whitespace.c \
	fo-wrapper-whitespace.h \
	fo-wrapper-whitespace-private.h
